1. Add Snapshot part (for each surfacetexture)
Signed-off-by: HankWu <HankWu@via.com.tw>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     <TextView android:text="GLSurfaceView" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
+    <!--SnapShot SurfaceView by using GLES-->
+    <SurfaceView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/sv1"/>
 
     <LinearLayout
         android:orientation="vertical"
